panik commit, xamp got fked

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>School Bus Booking System</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body onload="check()">
     <div class="home">
         <div class="nav">
             <div class="logo">
-                <h1>School Bus Booking System</h1>
+                <h1>SBBS</h1>
             </div>
             <div class="nav-links">
                 <a href="/">Home</a>
