--- a/register.html
+++ b/register.html
@@ -32,6 +32,6 @@
         </div>
         <input type="submit" value="Register">
     </form>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
