--- a/login.html
+++ b/login.html
@@ -6,11 +6,12 @@
 <body>
     <h2>Login Form</h2>
     <form action="login.php" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <label for="register">Register Number:</label>
+        <input type="text" id="register" name="register" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         <input type="submit" value="Login">
     </form>
+    <a href="/register.html">Register</a>
 </body>
 </html>
