--- a/register.html
+++ b/register.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Registration Page</h1>
     <form method="POST" action="register.php" onsubmit="return checkForm()">
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" required><br><br>
+        <label for="register">Register Number:</label>
+        <input type="text" name="register" id="register" required><br><br>
 
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required><br><br>
@@ -22,9 +22,40 @@
         <label for="confirm_password">Confirm Password:</label>
         <input type="password" name="confirm_password" id="confirm_password" required><br><br>
 
-        <label for="college_id">College ID:</label>
-        <input type="text" name="college_id" id="college_id" required><br><br>
-
+        <label for="area">Area:</label>
+        <select type="range" name="area" id="area" required>
+            <option value="default" selected disabled>Default</option>
+            <option value="manyata">Manyata</option>
+            <option value="hebbal">Hebbal</option>
+            <option value="yelahanka">Yelahanka</option>
+            <option value="jakkur">Jakkur</option>
+            <option value="kogilu">Kogilu</option>
+            <option value="kempapura">Kempapura</option>
+            <option value="nagavara">Nagavara</option>
+            <option value="hennur">Hennur</option>
+            <option value="kalyan">Kalyan</option>
+            <option value="kammanahalli">Kammanahalli</option>
+            <option value="banaswadi">Banaswadi</option>
+            <option value="horamavu">Horamavu</option>
+            <option value="ramamurthy">Ramamurthy</option>
+            <option value="kasturi">Kasturi</option>
+            <option value="kothanur">Kothanur</option>
+            <option value="kannur">Kannur</option>
+            <option value="hormavu">Hormavu</option>
+            <option value="kalkere">Kalkere</option>
+            <option value="nri">NRI Layout</option>
+            <option value="hrbr">HRBR Layout</option>
+            <option value="kammanahalli">Kammanahalli</option>
+            <option value="kalyan">Kalyan Nagar</option>
+            <option value="banaswadi">Banaswadi</option>
+            <option value="horamavu">Horamavu</option>
+            <option value="ramamurthy">Ramamurthy Nagar</option>
+            <option value="kasturi">Kasturi Nagar</option>
+            <option value="kothanur">Kothanur</option>
+            <option value="hormavu">Hormavu</option>
+            <option value="kalkere">Kalkere</option>
+        </select>
+        <br><br>
         <label for="address">Address:</label>
         <textarea name="address" id="address" required></textarea><br><br>
         <div class="error">
