--- a/login-student.html
+++ b/login-student.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>School Bus Booking System</title>
+    <title>Login Form</title>
 </head>
 <body>
     <header class="nav-header">
@@ -20,8 +20,8 @@
                 </a>
             </div>
             <div class="nav-items" id="nav-items">
-                <a href="/" class="active">Home</a>
-                <a href="login.html">Login</a>
+                <a href="/">Home</a>
+                <a href="login.html" class="active">Login</a>
                 <a href="register.html">Register</a>
             </div>
             <div class="hamburger">
@@ -29,23 +29,18 @@
                 <span id="closeHam">&#x2716;</span>
             </div>
         </nav>
-       </header>
-       <section id="home">
-        <div class="home-cont">
-            <div class="home-text">
-                <h1>Welcome to <br> School Bus Booking System</h1>
-                <p>Book your school bus tickets online</p>
-                <div class="home-btns">
-                    <a href="login.html" class="btn">Login</a>
-                    <a href="register.html" class="btn">Register</a>
-                </div>
-
-            </div>
-            <div class="home-img">
-                <img src="/assets/bus-image.png" alt="" srcset="">
-            </div>
-        </div>
-       </section>
-    <script src="/scripts/script.js"></script>
+    </header>
+    <div class="form-cont">
+        <h1>Student Login</h1>
+        <form action="/login.php" method="POST">
+            <label for="register">Register Number or E-mail:</label>
+            <input type="text" id="register" name="register" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Login" class="btn">
+            <span class="center">or</span>
+            <a href="register-student.html" class="btn">Register</a>
+        </form>
+    </div>
 </body>
 </html>
