Added student hompage with registerd landing page

--- a/registered.html
+++ b/registered.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>School Bus Booking System</title>
+    <title>Registration Successfully</title>
 </head>
 <body>
     <header class="nav-header">
@@ -26,6 +26,7 @@
                 <a href="/" class="active">Home</a>
                 <a href="login.html">Login</a>
                 <a href="register.html">Register</a>
+                <a href="">Admin</a>
             </div>
             <div class="hamburger">
                 <span id="openHam">&#9776;</span>
@@ -33,22 +34,12 @@
             </div>
         </nav>
        </header>
-       <section id="home">
-        <div class="home-cont">
-            <div class="home-text">
-                <h1>Welcome to <br> School Bus Booking System</h1>
-                <p>Book your school bus tickets online</p>
-                <div class="home-btns">
-                    <a href="login.html" class="btn">Login</a>
-                    <a href="register.html" class="btn">Register</a>
-                </div>
+       <div class="home registered">
+        <!-- stop gif loop -->
+        <img src="/assets/check-an.gif" class="stop" alt="">
+        <h1>Successfully Registered</h1>
+        <p>Thank you for registering with us. You can now login to your account and book a bus.</p>
+        <a href="login.html" class="btn">Login</a>
+       </div>
 
-            </div>
-            <div class="home-img">
-                <img src="/assets/bus-image.png" alt="" srcset="">
-            </div>
-        </div>
-       </section>
-    <script src="/scripts/script.js"></script>
 </body>
-</html>
