--- a/register.html
+++ b/register.html
@@ -15,8 +15,11 @@
                     <div class="logo">
                         <img src="/assets/bus-logo.png" alt="" srcset="">
                     </div>
-                    <p class="logo-text">
+                    <p class="logo-text web">
                         School Bus Booking System
+                    </p>
+                    <p class="logo-text mob">
+                        SBBS
                     </p>
                 </a>
             </div>
