UPDATED: Updated links

--- a/register-student.html
+++ b/register-student.html
@@ -37,7 +37,7 @@
        </header>
        <div class="form-cont">
         <h1>Student Registration</h1>
-        <form method="POST" action="register.php" onsubmit="return checkForm()">
+        <form method="POST" action="register-student.php" onsubmit="return checkForm()">
             <label for="register">Register Number:</label>
             <input type="text" name="register" id="register" placeholder="22C01009" required>
     
