--- a/login-student.html
+++ b/login-student.html
@@ -35,7 +35,7 @@
     </header>
     <div class="form-cont">
         <h1>Student Login</h1>
-        <form action="/login.php" method="POST">
+        <form action="/login-student.php" method="POST">
             <label for="register">Register Number or E-mail:</label>
             <input type="text" id="register" name="register" required>
             <label for="password">Password:</label>
