Fixed nav bar issue

--- a/invalid-pass.html
+++ b/invalid-pass.html
@@ -45,6 +45,7 @@
         setTimeout(() => {
             history.back();
         }, 5000);
-    </script>
+        </script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
