--- a/login-parent.html
+++ b/login-parent.html
@@ -45,5 +45,6 @@
             <a href="register-parent.html" class="btn">Register</a>
         </form>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
