--- a/register-admin.html
+++ b/register-admin.html
@@ -62,6 +62,7 @@
             <a href="/login.html" class="btn">Login</a>
         </form>
     </div>
+    <script src="scripts/script.js"></script>
     <script src="scripts/adminauth.js"></script>
 </body>
 </html>
