--- a/registered.html
+++ b/registered.html
@@ -33,13 +33,15 @@
                 <span id="closeHam">&#x2716;</span>
             </div>
         </nav>
-       </header>
-       <div class="home registered">
-        <!-- stop gif loop -->
-        <img src="/assets/check-an.gif" class="stop" alt="">
-        <h1>Successfully Registered</h1>
-        <p>Thank you for registering with us. You can now login to your account and book a bus.</p>
-        <a href="login.html" class="btn">Login</a>
-       </div>
+    </header>
+    <div class="home registered">
+    <!-- stop gif loop -->
+    <img src="/assets/check-an.gif" class="stop" alt="">
+    <h1>Successfully Registered</h1>
+    <p>Thank you for registering with us. You can now login to your account and book a bus.</p>
+    <a href="login.html" class="btn">Login</a>
+    </div>
 
+    <script src="scripts/script.js"></script>
 </body>
+</html>
