testes on parent and student

--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
                     <p>
                         Register as a student
                     </p>
-                    <a href="/register-student.html" class="btn">Register</a>
+                    <a href="/registeration-pages/register-student.html" class="btn">Register</a>
 
                 </div>
                 <div class="reg-btn">
@@ -62,7 +62,7 @@
                     <p>
                         Register as a parent
                     </p>
-                    <a href="/register-parent.html" class="btn">Register</a>
+                    <a href="/registeration-pages/register-parent.html" class="btn">Register</a>
                 </div>
                 <div class="reg-btn">
                     <h1 class="reg-id">
