--- a/registration-scripts/registered.html
+++ b/registration-scripts/registered.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Registration Successfully</title>
 </head>
 <body>
@@ -24,8 +24,8 @@
             </div>
             <div class="nav-items" id="nav-items">
                 <a href="/" class="active">Home</a>
-                <a href="login.html">Login</a>
-                <a href="register.html">Register</a>
+                <a href="/login.html">Login</a>
+                <a href="/register.html">Register</a>
                 <a href="">Admin</a>
             </div>
             <div class="hamburger">
@@ -39,9 +39,9 @@
     <img src="/assets/check-an.gif" class="stop" alt="">
     <h1>Successfully Registered</h1>
     <p>Thank you for registering with us. You can now login to your account and book a bus.</p>
-    <a href="login.html" class="btn">Login</a>
+    <a href="/login.html" class="btn">Login</a>
     </div>
 
-    <script src="scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
