Organised admin registration

--- a/register.html
+++ b/register.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <h3 class="admin-reg">
-                College Administration <br> <a href="/register-admin.html" class="btn">Register as Admin</a>
+                College Administration <br> <a href="/registeration-pages/register-admin.html" class="btn">Register as Admin</a>
             </h3>
         </div>
     </section>
