--- a/registeration-pages/register-admin.html
+++ b/registeration-pages/register-admin.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Admin Registration</title>
-    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="nav-header">
@@ -25,8 +24,8 @@
             </div>
             <div class="nav-items" id="nav-items">
                 <a href="/">Home</a>
-                <a href="login.html">Login</a>
-                <a href="register.html" class="active">Register</a>
+                <a href="/login.html">Login</a>
+                <a href="/register.html" class="active">Register</a>
                 <a href="">Admin</a>
             </div>
             <div class="hamburger">
@@ -37,7 +36,7 @@
        </header>
        <div class="form-cont">
         <h1>Admin Registration</h1>
-        <form method="POST" action="register-admin.php" onsubmit="return checkAdminForm()">    
+        <form method="POST" action="/registration-scripts/register-admin.php" onsubmit="return checkAdminForm()">    
             <label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Aditya Kumar" required>
     
@@ -62,7 +61,7 @@
             <a href="/login.html" class="btn">Login</a>
         </form>
     </div>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/adminauth.js"></script>
+    <script src="/scripts/script.js"></script>
+    <script src="/scripts/adminauth.js"></script>
 </body>
 </html>
