Organised for driver registration

--- a/register.html
+++ b/register.html
@@ -72,7 +72,7 @@
                     <p>
                         Register as a driver.
                     </p>
-                    <a href="/register-driver.html" class="btn">Register</a>
+                    <a href="/registeration-pages/register-driver.html" class="btn">Register</a>
                 </div>
             </div>
             <h3 class="admin-reg">
