--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <h3 class="admin-reg">
-                College Administration <br> <a href="/login-admin.html" class="btn">Login as Admin</a>
+                College Administration <br> <a href="/login-pages/login-admin.html" class="btn">Login as Admin</a>
             </h3>
         </div>
     </section>
