--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                     <p>
                         Login as a student
                     </p>
-                    <a href="/login-student.html" class="btn">Login</a>
+                    <a href="/login-pages/login-student.html" class="btn">Login</a>
 
                 </div>
                 <div class="reg-btn">
@@ -58,7 +58,7 @@
                     <p>
                         Login as a parent
                     </p>
-                    <a href="/login-parent.html" class="btn">Login</a>
+                    <a href="/login-pages/login-parent.html" class="btn">Login</a>
                 </div>
                 <div class="reg-btn">
                     <h1 class="reg-id">
@@ -68,7 +68,7 @@
                     <p>
                         Login as a driver.
                     </p>
-                    <a href="/login-driver.html" class="btn">Login</a>
+                    <a href="/login-pages/login-driver.html" class="btn">Login</a>
                 </div>
             </div>
             <h3 class="admin-reg">
