--- a/login-pages/login-driver.html
+++ b/login-pages/login-driver.html
@@ -3,14 +3,14 @@
 <head>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Driver Login</title>
 </head>
 <body>
     <header class="nav-header">
         <nav>
             <div class="logo-container">
-                <a href="./index.html">
+                <a href="/">
                     <div class="logo">
                         <img src="/assets/bus-logo.png" alt="" srcset="">
                     </div>
@@ -24,8 +24,8 @@
             </div>
             <div class="nav-items" id="nav-items">
                 <a href="/">Home</a>
-                <a href="login.html" class="active">Login</a>
-                <a href="register.html">Register</a>
+                <a href="/login.html" class="active">Login</a>
+                <a href="/register.html">Register</a>
             </div>
             <div class="hamburger">
                 <span id="openHam">&#9776;</span>
@@ -35,16 +35,16 @@
     </header>
     <div class="form-cont">
         <h1>Driver Login</h1>
-        <form action="/login-driver.php" method="POST">
+        <form action="/login-scripts/login-driver.php" method="POST">
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <input type="submit" value="Login" class="btn">
             <span class="center">or</span>
-            <a href="register-driver.html" class="btn">Register</a>
+            <a href="/registeration-pages/register-driver.html" class="btn">Register</a>
         </form>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
