--- a/login-pages/login-student.html
+++ b/login-pages/login-student.html
@@ -10,7 +10,7 @@
     <header class="nav-header">
         <nav>
             <div class="logo-container">
-                <a href="./index.html">
+                <a href="/">
                     <div class="logo">
                         <img src="/assets/bus-logo.png" alt="" srcset="">
                     </div>
