--- a/login-pages/login-student.html
+++ b/login-pages/login-student.html
@@ -37,9 +37,9 @@
         <h1>Student Login</h1>
         <form action="/login-scripts/login-student.php" method="POST">
             <label for="register">Register Number or E-mail:</label>
-            <input type="text" id="register" name="register" required>
+            <input type="text" id="register" name="register" placeholder="Enter your Register number or E-mail" required>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
             <input type="submit" value="Login" class="btn">
             <span class="center">or</span>
             <a href="/registeration-pages/register-student.html" class="btn">Register</a>
