Removed the dashboard from driver

--- a/registeration-pages/register-student.html
+++ b/registeration-pages/register-student.html
@@ -53,7 +53,7 @@
     
             <label for="area">Area:</label>
             <select type="range" name="area" id="area" required>
-                <option value="default" selected disabled>Default</option>
+                <option value="default" selected disabled>Select your area</option>
                 <option value="manyata">Manyata</option>
                 <option value="hebbal">Hebbal</option>
                 <option value="yelahanka">Yelahanka</option>
