--- a/registeration-pages/register-admin.html
+++ b/registeration-pages/register-admin.html
@@ -65,3 +65,15 @@
     <script src="/scripts/adminauth.js"></script>
 </body>
 </html>
+
+
+<!--
+Developed by AdityaKrCodes
+GitHub: https://github.com/adityakrcodes
+Repo: https://github.com/adityakrcodes/School-Bus-Booking-System
+Instagram: https://instagram.com/adityakrcodes
+X: https://x.com/adityakrcodes
+
+NOTE: You are free to copy the code but credits will be appreciated.
+
+-->
